syntax = "proto3";

option csharp_namespace = "DemoAPI.gRPC";

service WeatherForecast {
	rpc GetForecastInfo (GetForecastRequest) returns (stream ForecastResult);
	rpc GetForecastForDateInfo (GetForecastForDateRequest) returns (ForecastResult);
}

message GetForecastRequest {
    int32 forecastDaysQuantity = 1;
}

message GetForecastForDateRequest {
    string date = 1;
}

message ForecastResult {
    string date = 1;
    string summary = 2;
    int32 temperatureC = 3;
    bool canYouPlayGolf = 4;
}